@@ -115,57 +115,6 @@
                     <h4>And now a little filler text for flavor</h4>
                     <p>Spicy jalapeno bacon ipsum dolor amet meatball capicola officia, in dolore beef ribs flank. Mollit est beef ribs eu consequat, alcatra culpa tri-tip reprehenderit voluptate chicken flank pastrami. Occaecat alcatra ea, id t-bone magna tail. Veniam corned beef ball tip, tempor ut buffalo proident tri-tip strip steak capicola burgdoggen shank alcatra. Excepteur filet mignon magna pork loin swine, t-bone shankle ham chuck venison ad ut commodo. Brisket sausage pariatur culpa, sint et commodo excepteur kielbasa pork loin filet mignon buffalo leberkas nulla. Nulla labore frankfurter, voluptate swine cupidatat officia.</p>
                     <p>Cupidatat cillum burgdoggen beef, short ribs pork loin ground round alcatra ham hock salami esse fugiat irure. Buffalo meatball anim occaecat, brisket cupidatat tongue. Non pariatur sed frankfurter turducken ball tip. Cupidatat ea irure ball tip kevin in pastrami commodo. Flank beef et in labore shankle porchetta excepteur sunt non tongue boudin nulla ham. Sausage t-bone ham hock, laborum esse doner ut pork loin prosciutto kevin in pig bacon pork dolore. Labore chuck capicola, bacon commodo spare ribs ground round.</p>
-                    <h2>Changelog</h2>
-                    <ul>
-                        <li>more contrast on sidebar</li>
-                        <li>no more filigree on sidebar</li>
-                        <li>forgot to take that out, hehe...</li>
-                        <li>less background, more blinky blinky</li>
-                        <li>links look better now</li>
-                        <li>better filler text is in order, I think</li>
-                        <li>little demo text addition</li>
-                        <li>prettify code</li>
-                        <li>better wood textures for all</li>
-                        <li>oh man this shit is much better and less of a headache</li>
-                        <li>deleted old sidebar</li>
-                        <li>new icons for mobile</li>
-                        <li>more tweaks to background</li>
-                        <li>different backgrounds, improved sidebar</li>
-                        <li>tweaks to the night sidebar</li>
-                        <li>testing out a new background</li>
-                        <li>left test code in by accident! whoops!</li>
-                        <li>fixes to mobile menu layout</li>
-                        <li>css for structure and scroll to top icon</li>
-                        <li>added mobile menu icons, cleaned up structure a lot</li>
-                        <li>added example scroll to top icon</li>
-                        <li>fixed layout so it worked like the old theme, without tables or frames</li>
-                        <li>fixed footer to bottom and cleaned it up finally</li>
-                        <li>BACON</li>
-                        <li>remove unneeded padding from title bar links</li>
-                        <li>move all changes to index.html and delete landing-page.html</li>
-                        <li>ignore all Sublime Text project files</li>
-                        <li>added menu and fixed footer, small layout changes</li>
-                        <li>more layout updates</li>
-                        <li>really getting started on images</li>
-                        <li>redid footer styles</li>
-                        <li>add test backgrounds</li>
-                        <li>remove backgrounds</li>
-                        <li>added footer styles</li>
-                        <li>added placeholder text</li>
-                        <li>added footer div</li>
-                        <li>basic structure divs</li>
-                        <li>created landing page</li>
-                        <li>added style sheet</li>
-                        <li>prettify html</li>
-                        <li>remove incorrectly named changelog</li>
-                        <li>Merge remote-tracking branch 'origin/master'</li>
-                        <li>Add CONTRIBUTING</li>
-                        <li>created index template</li>
-                        <li>update changelog</li>
-                        <li>Add CHANGELOG</li>
-                        <li>Add LICENSE</li>
-                        <li>Initial commit</li>
-                    </ul>
                 </div>
             </div>
         </div>
