@@ -1,3 +1,5 @@
+- title-bar gets the footer treatment
+- vast improvement to the sidebar
 - more contrast on sidebar
 - no more filigree on sidebar
 - forgot to take that out, hehe...
